--- a/app/views/companies/selmaimobiliaria/_sidebar.html.erb
+++ b/app/views/companies/selmaimobiliaria/_sidebar.html.erb
@@ -1,20 +1,17 @@
 <aside>
-	<%= image_tag 'companies/guavas/logo.png', alt: 'Guavas Webdesign' %>
+	<%= image_tag 'companies/selmaimobiliaria/logo.png', alt: 'Selma Santos Corretora de Imóveis' %>
 	<dl>
 		<dt>Telefones</dt>
-			<dd>24 2453 4090</dd>
-			<dd>24 8837 6652</dd>
+			<dd>24 2452 0525</dd>
+			<dd>24 9266 4194</dd>
+			<dd>24 8841 6882</dd>
 		<dt>Endereço</dt>
-			<dd><address>Rua Lourenço Jannuzzi, 181 - São Cristóvão</address></dd>
+			<dd><address>Rua do Barroso, 320 - Barroso</address></dd>
 		<dt>E-mail</dt>
-			<dd><%= mail_to 'contato@guavas.com.br', 'contato@guavas.com.br', title: 'Enviar e-mail' %></dd>
-		<dt>Website</dt>
-			<dd><%= link_to 'www.guavas.com.br', 'http://www.guavas.com.br', target: '_blank', title: 'Visitar website' %></dd>
-		<dt>Perfis</dt>
-			<dd><%= link_to 'Facebook', 'http://www.facebook.com/guavaswebdesign', target: '_blank', title: 'Visitar perfil no Facebook' %></dd>
+			<dd><%= mail_to 'selmafatima50@hotmail.com', 'selmafatima50@hotmail.com', title: 'Enviar e-mail' %></dd>
 		<dt>Categorias</dt>
-			<dd>Internet, Sites</dd>
+			<dd>Imobiliárias</dd>
 		<dt>Tags de Produtos</dt>
-			<dd>desenvolvimento, programação, designer, web</dd>
+			<dd>imóveis, compra, venda, avaliação, perícia, legalização, casas, apartamentos</dd>
 	</dl>
 </aside>
