--- a/app/views/companies/guavas/home.html.erb
+++ b/app/views/companies/guavas/home.html.erb
@@ -32,7 +32,7 @@
     </article>
     <article class="gallery">
       <h3>Trabalhos Recentes</h3>
-      <ul>
+      <ul class="images">
         <li><%= link_to image_tag('companies/guavas/thumb-gallery-1-1.png', alt: 'Site simples para empresa Andaimes Alfa (www.andaimesalfa.com.br)'), image_path('companies/guavas/big-gallery-1-1.png'), title: 'Site simples para empresa Andaimes Alfa (www.andaimesalfa.com.br)', rel: 'gallery-1' %></li>
         <li><%= link_to image_tag('companies/guavas/thumb-gallery-1-2.png', alt: 'Site desenvolvido para empresa Barra Clear - Soluções Ambientais (www.barraclear.com.br)'), image_path('companies/guavas/big-gallery-1-2.png'), title: 'Site desenvolvido para empresa Barra Clear - Soluções Ambientais (www.barraclear.com.br)', rel: 'gallery-1' %></li>
         <li><%= link_to image_tag('companies/guavas/thumb-gallery-1-3.png', alt: 'Loja virtual para marca de roupa de MMA Get Your Fight (GYF) (www.getyourfight.com)'), image_path('companies/guavas/big-gallery-1-3.png'), title: 'Loja virtual para marca de roupa de MMA Get Your Fight (GYF) (www.getyourfight.com)', rel: 'gallery-1' %></li>
