--- a/app/views/companies/selmaimobiliaria/home.html.erb
+++ b/app/views/companies/selmaimobiliaria/home.html.erb
@@ -24,5 +24,20 @@
         Descrição da empresa...
       </p>
     </article>
+    <article class="products">
+      <h3>Produtos</h3>
+      <ul class="list">
+        <li>
+          <strong class="price">R$ 0.000,00</strong>
+          <h4>Nome do Produto</h4>
+          <p>
+            Descrição do produto...
+          </p>
+          <ul class="images">
+            <li><%= link_to image_tag('companies/guavas/thumb-gallery-1-1.png', alt: 'Site simples para empresa Andaimes Alfa (www.andaimesalfa.com.br)'), image_path('companies/guavas/big-gallery-1-1.png'), title: 'Site simples para empresa Andaimes Alfa (www.andaimesalfa.com.br)', rel: 'products-1-1' %></li>
+          </ul>
+        </li>
+      </ul>
+    </article>
   </section>
 </div>
