--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -13,7 +13,7 @@
 <div class="container search main-content">
 	<p id="companies-count">
 		Já temos um total de <strong><%= Company.count %></strong> empresas cadastradas.
-		Quer se destacar? <%= mail_to ENV['SMTP_ADDRESS'], 'Entre em contato', title: 'Envie-nos um e-mail. Ficaremos felizes!', class: 'inverse' %> e conheça as vantagens.
+		Quer se destacar? <%= default_contact_email 'Entre em contato', :inverse %> e conheça as vantagens.
 	</p>
 	<%= render 'search_results' %>
 </div>
