--- a/app/views/companies/selmaimobiliaria/home.html.erb
+++ b/app/views/companies/selmaimobiliaria/home.html.erb
@@ -25,16 +25,21 @@
       </p>
     </article>
     <article class="products">
-      <h3>Produtos</h3>
+      <h3>Casas à Venda</h3>
       <ul class="list">
         <li>
-          <strong class="price">R$ 0.000,00</strong>
-          <h4>Nome do Produto</h4>
+          <strong class="price">R$ 75.000,00</strong>
+          <h4>Rio Preto - MG</h4>
           <p>
-            Descrição do produto...
+            Sala, 3 quartos, cozinha, banheiro, área de serviço. Área de fundos com saída para a outra rua. No centro da cidade e do comércio local.
           </p>
           <ul class="images">
-            <li><%= link_to image_tag('companies/guavas/thumb-gallery-1-1.png', alt: 'Site simples para empresa Andaimes Alfa (www.andaimesalfa.com.br)'), image_path('companies/guavas/big-gallery-1-1.png'), title: 'Site simples para empresa Andaimes Alfa (www.andaimesalfa.com.br)', rel: 'products-1-1' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-1-1.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-1-1.jpg'), title: '', rel: 'products-1-1' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-1-2.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-1-2.jpg'), title: '', rel: 'products-1-1' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-1-3.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-1-3.jpg'), title: '', rel: 'products-1-1' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-1-4.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-1-4.jpg'), title: '', rel: 'products-1-1' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-1-5.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-1-5.jpg'), title: '', rel: 'products-1-1' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-1-6.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-1-6.jpg'), title: '', rel: 'products-1-1' %></li>
           </ul>
         </li>
       </ul>
