fix product information

--- a/app/views/companies/selmaimobiliaria/home.html.erb
+++ b/app/views/companies/selmaimobiliaria/home.html.erb
@@ -28,10 +28,10 @@
       <h3>Casas à Venda</h3>
       <ul class="list">
         <li>
-          <strong class="price">R$ 75.000,00</strong>
-          <h4>Rio Preto - MG</h4>
+          <strong class="price">R$ 140.000,00</strong>
+          <h4>Laranjeiras - Travessa Joaquim Soares</h4>
           <p>
-            Sala, 3 quartos, cozinha, banheiro, área de serviço. Área de fundos com saída para a outra rua. No centro da cidade e do comércio local.
+            Sala e 2 quartos com piso em tábua corrida, sendo 1 suíte. Banheiro social, cozinha ampla, área de serviço e garagem. Casa em estilo colonial com linda vista.
           </p>
           <ul class="images">
             <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-1-1.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-1-1.jpg'), title: '', rel: 'products-1-1' %></li>
@@ -41,6 +41,13 @@
             <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-1-5.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-1-5.jpg'), title: '', rel: 'products-1-1' %></li>
             <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-1-6.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-1-6.jpg'), title: '', rel: 'products-1-1' %></li>
           </ul>
+        </li>
+        <li>
+          <strong class="price">R$ 75.000,00</strong>
+          <h4>Rio Preto - MG</h4>
+          <p>
+            Sala, 3 quartos, cozinha, banheiro, área de serviço. Área de fundos com saída para a outra rua. No centro da cidade e do comércio local.
+          </p>
         </li>
       </ul>
     </article>
