add another product to selma

--- a/app/views/companies/selmaimobiliaria/home.html.erb
+++ b/app/views/companies/selmaimobiliaria/home.html.erb
@@ -49,8 +49,24 @@
             Sala, 3 quartos, cozinha, banheiro e área de serviço. Área de fundos com saída para a outra rua. No centro da cidade e do comércio local.
           </p>
           <ul class="images">
-            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-2-1.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-2-1.jpg'), title: '', rel: 'products-1-1' %></li>
-            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-2-2.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-2-2.jpg'), title: '', rel: 'products-1-1' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-2-1.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-2-1.jpg'), title: '', rel: 'products-1-2' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-2-2.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-2-2.jpg'), title: '', rel: 'products-1-2' %></li>
+          </ul>
+        </li>
+        <li>
+          <strong class="price">R$ 350.000,00</strong>
+          <h4>Centro - Rua Getúlio Vargas</h4>
+          <p>
+            3 pavimentos contendo sala ampla, cozinha em estilo americano, 5 quartos com suíte em blindex, escritório, sala para TV, varanda no 3º pavimento e garagem. Construção nova.
+          </p>
+          <ul class="images">
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-3-1.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-3-1.jpg'), title: '', rel: 'products-1-3' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-3-2.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-3-2.jpg'), title: '', rel: 'products-1-3' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-3-3.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-3-3.jpg'), title: '', rel: 'products-1-3' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-3-4.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-3-4.jpg'), title: '', rel: 'products-1-3' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-3-5.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-3-5.jpg'), title: '', rel: 'products-1-3' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-3-6.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-3-6.jpg'), title: '', rel: 'products-1-3' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-3-7.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-3-7.jpg'), title: '', rel: 'products-1-3' %></li>
           </ul>
         </li>
       </ul>
