add more one product to selma

--- a/app/views/companies/selmaimobiliaria/home.html.erb
+++ b/app/views/companies/selmaimobiliaria/home.html.erb
@@ -71,5 +71,23 @@
         </li>
       </ul>
     </article>
+    <article class="products">
+      <h3>Sítio à Venda</h3>
+      <ul class="list">
+        <li>
+          <strong class="price">R$ 160.000,00</strong>
+          <h4>Serra da Glória</h4>
+          <p>
+            Aproximadamente 7 alqueires com vasta área de pastagem em braquiaria, mata ciliar com pomar e pequeno curral. Casa com 2 quartos, sala, cozinha e banheiros. Com luz elétrica e a apenas 20 minutos do centro da cidade. Estuda-se proposta.
+          </p>
+          <ul class="images">
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-4-1.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-4-1.jpg'), title: '', rel: 'products-1-4' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-4-2.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-4-2.jpg'), title: '', rel: 'products-1-4' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-4-3.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-4-3.jpg'), title: '', rel: 'products-1-4' %></li>
+            <li><%= link_to image_tag('companies/selmaimobiliaria/thumb-products-1-4-4.png', alt: ''), image_path('companies/selmaimobiliaria/big-products-1-4-4.jpg'), title: '', rel: 'products-1-4' %></li>
+          </ul>
+        </li>
+      </ul>
+    </article>
   </section>
 </div>
