some changes on selma

--- a/app/views/companies/selmaimobiliaria/home.html.erb
+++ b/app/views/companies/selmaimobiliaria/home.html.erb
@@ -1,5 +1,5 @@
 <%
-  description = 'Compra, venda, perícia, avaliação e legalização de imóveis.'
+  description = 'Compra, venda, avaliação, perícia e legalização de imóveis.'
 
   content_for :title,       @company.name
   content_for :description, description
@@ -15,15 +15,12 @@
   <%= render 'companies/selmaimobiliaria/sidebar' %>
   <section>
     <article class="cover">
-      <%= image_tag('companies/selmaimobiliaria/cover-1.png', alt: description) %>
+      <%= image_tag('companies/selmaimobiliaria/cover-1.jpg', alt: description) %>
     </article>
     <article class="text">
       <h3>Anuncie seu Imóvel</h3>
       <p>
-        Trabalhamos com compra, venda, perícia, avaliação e legalização de imóveis. Entre em contato e teremos o maior prazer em lhe atender.
-      </p>
-      <p>
-        CRECI/RJ: 052002 - CNAI: 06804
+        COMPRA. VENDA. AVALIAÇÃO. PERÍCIA E LEGALIZAÇÃO DE IMÓVEIS.
       </p>
     </article>
     <article class="products">
