fix back to catalog path helper

--- a/app/views/companies/_header.html.erb
+++ b/app/views/companies/_header.html.erb
@@ -1,2 +1,2 @@
-<%= link_to '« Voltar ao Catálogo', back_to_catalog_url, title: 'Voltar ao catálogo', class: 'back-to-catalog' %>
+<%= link_to '« Voltar ao Catálogo', root_path, title: 'Voltar ao catálogo', class: 'back-to-catalog' %>
 <h2><%= @company.name %></h2>
