--- a/app/views/companies/_search_results.html.erb
+++ b/app/views/companies/_search_results.html.erb
@@ -1,5 +1,5 @@
 <ul id="search-results">
-	<% if @companies.any? %>
+	<% if @companies.all.any? %>
 		<% @companies.each do |company| %>
 			<li data-id="<%= company.id %>" class="<%= 'highlight ' if company.have_page? %>result">
 				<%= link_to image_tag('layout/see_details.png', alt: 'Ver detalhes'), company_path(company.username), title: "Ver detalhes de #{company.name}", class: 'see-details' if company.have_page? %>
