--- a/app/assets/stylesheets/company.index.css
+++ b/app/assets/stylesheets/company.index.css
@@ -71,6 +71,28 @@ header.search .add-on {
   font-size: 1.2em;
 }
 
+.pagination {
+  margin: 10px 0;
+  font-size: 1.1em;
+}
+
+.pagination span {
+  display: inline-block;
+  padding: 0 5px;
+}
+
+.pagination .current {
+  font-weight: bold;
+}
+
+.pagination a {
+  text-decoration: underline;
+}
+
+.pagination a:hover {
+  text-decoration: none;
+}
+
 #search-results {
   list-style: none;
   margin: -10px;
