--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -102,7 +102,8 @@ nav li {
 }
 
 footer {
-  background: #FFF url('layout/background_footer.png') repeat-x;
+  background-image: url('layout/background_footer.png');
+  background-repeat: repeat-x;
   position: absolute;
   bottom: 0;
   padding: 0;
