--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= stylesheet_link_tag 'application' %>
     <!--[if lt IE 9]><%= javascript_include_tag 'html5' %><![endif]-->
   </head>
-  <body>
+  <body<%= yield(:body_attributes) %>>
     <div class="main-container">
       <header class="main">
         <div class="container">
