--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -1,1 +1,5 @@
-<p>As pessoas querem te ver.</p>
+<% content_for :body_attributes, ' class="new-leads"'.html_safe %>
+<div class="header-lead"></div>
+<div class="container lead main-content">
+  <p>As pessoas querem te ver.</p>
+</div>
