--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -83,4 +83,6 @@ $(function(){
   $('.addthis').show();
   $('.pagination').remove();
 
+  $.imgpreload('<%= image_path('layout/background_new_lead.jpg') %>');
+
 });
