--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -1,5 +1,26 @@
-<% content_for :body_attributes, ' class="new-leads"'.html_safe %>
+<% content_for :body_attributes, ' class="new-lead"'.html_safe %>
 <div class="header-lead"></div>
 <div class="container lead main-content">
-  <p>As pessoas querem te ver.</p>
+  <hgroup>
+    <h2>As pessoas<br />querem te ver.</h2>
+    <h3>Em qualquer lugar. A qualquer hora.</h3>
+  </hgroup>
+  <h4>Anuncie em nosso catálogo e seja encontrado pelo seu<br />público, inclusive através do Google e do Facebook.</h4>
+  <form>
+    <fieldset>
+      <legend>Experimente grátis!</legend>
+      <div>
+        <input type="text" />
+        <input type="text" />
+        <input type="text" />
+        <input type="submit" />
+      </div>
+      <div>
+        <h5>Com dúvidas?</h5>
+        <p>Neste momento...</p>
+        <p>Lembre-se...</p>
+        <p>Se preferir...</p>
+      </div>
+    </fieldset>
+  </form>
 </div>
