--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -6,9 +6,9 @@
     <h3>Em qualquer lugar. A qualquer hora.</h3>
   </hgroup>
   <h4>Anuncie em nosso catálogo e seja encontrado pelo seu<br />público, inclusive através do Google e do Facebook.</h4>
-  <form>
+  <form action="#">
     <fieldset>
-      <legend>Experimente grátis!</legend>
+      <legend><%= image_tag('layout/new_lead_form_legend.png', alt: 'Apenas R$49,00 por mês! Experimente grátis sem compromisso por 30 dias.') %></legend>
       <div>
         <input type="text" />
         <input type="text" />
