--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,6 @@
 /*= require reset
  *= require_self
+ *= require bootstrap
  *= require jquery-lionbars
  *= require fancybox
  *= require company.index
