--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -10,9 +10,9 @@
     <fieldset>
       <legend><%= image_tag('layout/new_lead_form_legend.png', alt: 'Apenas R$49,00 por mês! Experimente grátis sem compromisso por 30 dias.') %></legend>
       <div>
-        <input type="text" />
-        <input type="text" />
-        <input type="text" />
+        <input type="text" placeholder="Nome da Sua Empresa" />
+        <input type="text" placeholder="Seu Nome" />
+        <input type="text" placeholder="Seu E-mail" />
         <input type="submit" />
       </div>
       <div>
