--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -1,16 +1,14 @@
-header.search input[type=text] {
-  float: left;
-  padding: 10px;
-  width: 570px;
-  height: 18px;
+input[type=text] {
+  padding: 8px 5px;
+  width: 260px;
   font-family: inherit;
-  font-size: 1.3em;
+  font-size: 1.4em;
   color: #333;
 
   border: 1px solid #CCC;
-  -webkit-border-radius: 3px 0 0 3px;
-     -moz-border-radius: 3px 0 0 3px;
-          border-radius: 3px 0 0 3px;
+  -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+          border-radius: 3px;
   -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
      -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
           box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
@@ -21,7 +19,7 @@ header.search input[type=text] {
           transition: border linear .2s, box-shadow linear .2s;
 }
 
-header.search input[type=text]:focus {
+input[type=text]:focus {
   border-color: rgba(82,168,236,.8);
   outline: 0;
   -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,.1), 0 0 8px rgba(82,168,236,.6);
@@ -29,17 +27,17 @@ header.search input[type=text]:focus {
           box-shadow: inset 0 1px 3px rgba(0,0,0,.1), 0 0 8px rgba(82,168,236,.6);
 }
 
-header.search .add-on {
+.add-on {
   display: inline-block;
+  background-color: #F5F5F5;
+  margin-right: 0;
+  margin-left: -1px;
   padding: 4px 8px;
   width: 27px;
   height: 30px;
-  text-shadow: 0 1px 0 #FFF;
-  background-color: #F5F5F5;
   border: 1px solid #CCC;
-  margin-right: 0;
-  margin-left: -1px;
   -webkit-border-radius: 0 3px 3px 0;
      -moz-border-radius: 0 3px 3px 0;
           border-radius: 0 3px 3px 0;
+  text-shadow: 0 1px 0 #FFF;
 }
