--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -13,7 +13,7 @@
         <input type="text" placeholder="Nome da Sua Empresa" />
         <input type="text" placeholder="Seu Nome" />
         <input type="text" placeholder="Seu E-mail" />
-        <input type="submit" />
+        <input type="submit" value="Quero Experimentar »" />
       </div>
       <div>
         <h5>Com dúvidas?</h5>
