--- a/app/assets/stylesheets/lead.new.css
+++ b/app/assets/stylesheets/lead.new.css
@@ -45,5 +45,27 @@ body.new-lead {
 
 .lead input {
   display: block;
-  margin: 5px 0;
+  margin: 15px 0;
+}
+
+.lead input[type=text] {
+  margin-left: 1px;
+  width: 268px;
+}
+
+.lead input[type=submit] {
+  background: transparent url('layout/new_lead_call_to_action.png');
+  border: none;
+  width: 285px;
+  height: 50px;
+  text-transform: uppercase;
+}
+
+.lead input[type=submit]:hover {
+  background-position: left -50px;
+  cursor: pointer;
+}
+
+.lead input[type=submit]:active {
+  background-position: left -100px;
 }
