--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -9,17 +9,17 @@
   <form action="#">
     <fieldset>
       <legend><%= image_tag('layout/new_lead_form_legend.png', alt: 'Apenas R$49,00 por mês! Experimente grátis sem compromisso por 30 dias.') %></legend>
-      <div>
+      <div class="fields">
         <input type="text" placeholder="Nome da Sua Empresa" />
         <input type="text" placeholder="Seu Nome" />
         <input type="text" placeholder="Seu E-mail" />
         <input type="submit" value="Quero Experimentar »" />
       </div>
-      <div>
-        <h5>Com dúvidas?</h5>
-        <p>Neste momento...</p>
-        <p>Lembre-se...</p>
-        <p>Se preferir...</p>
+      <div class="disclaimer">
+        <h5>Está com dúvidas?</h5>
+        <p>Neste momento, tudo que precisamos são seus dados básicos para que possamos lhe enviar mais informações e esclarecer todas as suas dúvidas.</p>
+        <p>Lembre-se que você não terá nenhum compromisso ao enviar tais informações. Você pode desistir de anunciar conosco a qualquer momento sem nenhum tipo de taxa extra ou multa.</p>
+        <p>Se preferir, você pode visitar nossa <%= link_to 'seção de ajuda', 'javascript:void(0)', title: 'Visitar seção de ajuda', class: 'inverse' %> ou navegar pelo <%= link_to 'catálogo', root_path, title: 'Navegar pelo catálogo', class: 'inverse' %>. Queremos que você se sinta à vontade e seguro.</p>
       </div>
     </fieldset>
   </form>
