--- a/app/views/leads/new.html.erb
+++ b/app/views/leads/new.html.erb
@@ -12,7 +12,7 @@
       <div class="fields">
         <input type="text" placeholder="Nome da Sua Empresa" />
         <input type="text" placeholder="Seu Nome" />
-        <input type="text" placeholder="Seu E-mail" />
+        <input type="text" placeholder="seu@email.com" />
         <input type="submit" value="Quero Experimentar »" />
       </div>
       <div class="disclaimer">
